--- a/Wrangling_filter_select.Rmd
+++ b/Wrangling_filter_select.Rmd
@@ -210,8 +210,15 @@ There were 1,248 movies released in 1995.
 2. Which Comedies with an MPAA rating, over 120 minutes have a rating above 8?
 
 ```{r}
+long_highrated_comedies <- movies %>%
 
+filter(Comedy == 1, !mpaa == "", rating > 8, length > 120) %>%
+select(title, year, rating, length, mpaa)
+
+long_highrated_comedies
 ```
+
+There were 4 comedies, which were Big Fish, Forrest Gump, Homem Que Copiava, O and The Incredibles with an MPPA rating over 120  minutes, have a rating of 8.
 
 3. Create a subset of only Harry Potter movies with the title, rating, budget, and votes. Which movies are included in this data? Which is highest rated? Which has the most votes on imdb.com?
 
