--- a/Wrangling_filter_select.Rmd
+++ b/Wrangling_filter_select.Rmd
@@ -223,8 +223,15 @@ There were 4 comedies, which were Big Fish, Forrest Gump, Homem Que Copiava, O a
 3. Create a subset of only Harry Potter movies with the title, rating, budget, and votes. Which movies are included in this data? Which is highest rated? Which has the most votes on imdb.com?
 
 ```{r}
+HarryPotter <- movies %>%
 
+filter(str_detect(title,"Harry Potter")) %>%
+select(title, rating, budget, votes)
+
+HarryPotter
 ```
+
+The harry Potter movies included with the data are Harry Potter and the Chamber of Secrets, Harry Potter and the Prisoner of Azkaban,and Harry Potter and The Chamber of Secrets. The Prisoner of Azkaban is the highest rated. Th Sorcerers Stone received the most votes.
 
 4. What is the highest budget for a movie that is an Animation or Comedy with at least 100 votes?
 
